<resources>
    <string name="app_name">PillApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="alarm_name">Alarm Name</string>
    <string name="select_time">Select Time</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="add">ADD</string>
    <string name="find">FIND</string>
    <string name="delete">DELETE</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="update">UPDATE</string>
    <string name="textview">TextView</string>
    <string name="pill_amount">Pill Amount:</string>
    <string name="se">-</string>
    <string name="time_range">Time Range:</string>
    <string name="name">Name:</string>

</resources>
