<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:id="@+id/textViewx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/name"
        android:fontFamily="@font/moon"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/starttimex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewx"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/moon"
        android:text="@string/time_range"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/endttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="180dp"
        android:fontFamily="@font/moon"
        android:text="@string/se"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/PillAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/endttime"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/moon"
        android:text="@string/pill_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <TextView
        android:id="@+id/Namex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/starttimex"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/PillAmt"
        android:fontFamily="@font/moon"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/startx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/starttimex"
        android:layout_alignBottom="@+id/starttimex"
        android:layout_alignStart="@+id/Namex"
        android:fontFamily="@font/moon"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/endx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="153dp"
        android:fontFamily="@font/moon"
        android:text="@string/textview" />


    <TextView
        android:id="@+id/pillamtx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/Namex"
        android:layout_alignTop="@+id/PillAmt"
        android:fontFamily="@font/moon"
        android:text="@string/textview" />
</RelativeLayout>